--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -12,24 +12,29 @@ import { Card } from "@/components/ui/card";
         </p>
         <div class = "text-left">
             <p class="mt-3">
-                By day, I'm a product manager, 
-                driving end-to-end product development. 
-                I focus on deeply understanding user needs, 
-                bridging design and engineering, and ensuring fast, 
-                high-quality execution to build products customers love.
-        </p>
-        <p class="mt-3">
-            On the side, I'm building apps and websites with AI and writing about
-            the intersections of Christianity and technology. I'm endlessly
-            curious about the world and the people in it, because I know we were placed
-            in this moment in time for a reason.
-        </p>
-        <p class="mt-3">
-            In my free time, you can find me spending time with my family,
-                gathering eggs from my backyard chickens,
-                listening to podcasts,
-                meeting friends at a coffee shop (for the vibes, not the coffee),
-                or playing a board game.
+                I am Lorenzo Lazzeri, also known as shark812,
+                and I am the CEO of Sharklab.
+                As CEO, I lead the strategic direction of our studio,
+                defining the vision and ensuring our team works effectively
+                to achieve our goals.
+            </p>
+            <p class="mt-3">
+                In parallel, I am deeply involved as a mobile game developer.
+                My passion lies in transforming creative ideas
+                into compelling and successful mobile game experiences,
+                focusing on every aspect from technical development
+                to the overall product vision.
+                At Sharklab, we are dedicated to creating
+                innovative mobile games that deliver fun
+                and memorable user experiences.
+            </p>
+            <p class="mt-3">
+                Outside of my work in the studio,
+                I'm an avid fan of all kinds of sports,
+                and lately, I've become quite obsessed with Padel.
+                I also have a big love for cats –
+                perhaps a well-known stereotype for tech enthusiasts,
+                but it's true in my case!
             </p>
         </div>
     </section>
