--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,10 @@ import Resume from '@/components/resume.astro';
 import Contact from '@/components/contact.astro';
 import Footer from '@/components/footer.astro';
 import Favorites from '@/components/favorites.astro';
-import Blog from '@/components/blog.astro';
 
 // SEO metadata
-const title = "Becky's Portfolio | Product Manager";
-const description = "Hi, I'm Becky. I'm a product manager and a curious creator. Explore my projects, skills, and experience.";
+const title = "Shark812's Portfolio | Mobile developer";
+const description = "Hi, I'm Lorenzo. I'm a mobile developer. Explore my projects, skills, and experience.";
 ---
 
 <MainLayout title={title} description={description}>
@@ -28,9 +27,6 @@ const description = "Hi, I'm Becky. I'm a product manager and a curious creator.
 		</section>
 		<section id="resume-section" class="pb-20">
 			<Resume />
-		</section>
-		<section id="thoughts-section" class="pb-20">
-			<Blog />
 		</section>
 		<section id="contact-section" class="pb-20">
 			<Contact />
